--- a/resources/CSS/Styles.css
+++ b/resources/CSS/Styles.css
@@ -1,3 +1,12 @@
+p {
+    font-style: normal;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+ 
+h1 {
+font-style: normal;
+font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
 .A2NAV {
     background-color: #26666e;
 }
@@ -17,6 +26,9 @@
     position: fixed;
     top: 0;
     width: 100%;
+    font-style: normal;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+
 }
 
 .navbar li {
@@ -78,17 +90,17 @@ filter: drop-shadow(3px 3px 3px black);
 
 #greets ul {
     list-style-type: none;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+
 }
 
-.avatar {
-    background-image: url(../);
-}
 
 .bold {
     font-weight: 900;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 
 }
 
 a.blue {
-    color: rgb(136, 136, 151);
+    color: rgb(41, 41, 122);
 }
